--- a/main.css
+++ b/main.css
@@ -5,10 +5,11 @@
 * {
     margin: 0;
 }
+
 /* Ids */
 
 #content {
-    background-color: 1F0322;
+    background-color: #1F0322;
     overflow: hidden;
 }
 
@@ -18,16 +19,32 @@
     cursor: pointer;
 }
 
-.nodisp {
-    position: absolute;
-    top: -100vh;
-}
-
 .footer {
     position: absolute;
     padding: 10px;
     bottom: 0;
     left: 0;
+}
+
+.item {
+    font-family: Holtwood One SC;
+    color: #F0BCD4;
+}
+
+.vignette1 {
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    height: 25vh;
+    background-image: linear-gradient(0deg, #1f032200, #1F0322);
+}
+
+.vignette2 {
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
+    height: 25vh;
+    background-image: linear-gradient(180deg, #1f032200, #1F0322);
 }
 
 /* Elements */
@@ -39,4 +56,8 @@ audio {
 h1, h1:hover {
     font-size: 10vh !important;
     line-height: 10vh !important;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
